Fix code alignment

--- a/html.digital/css/general/_typography.scss
+++ b/html.digital/css/general/_typography.scss
@@ -10,8 +10,9 @@ img {
 
 code {
   display: inline-block;
-  margin: 0 0.1rem;
+  margin: 0.1rem;
   padding: 0rem 0.5rem;
+  vertical-align: middle;
 }
 
 code,
